--- a/t/tn/tns/tns-global.com.html
+++ b/t/tn/tns/tns-global.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tns-global.com privacy policy that was archived on 2009-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617171937id_/http%3A//www.tnsglobal.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tns-global.com privacy policy that was archived on 2009-10-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091012133216id_/http%3A//www.tnsglobal.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <!-- PageID 910 - published by RedDot 9 - 9.0.0.27 - 24975 -->
@@ -69,13 +69,13 @@
                                         <a href="/contact-us/">Contact us</a>
                                       </li>
                                     </ul>
-                                    <form action="/search-results.aspx" method="post">
+                                    <form action="/search-results.aspx" method="get">
                                       <fieldset id="iSearch">
-                                        <label for="iSearchField" class="hide">Search TNS Global</label> <input type="text" name="iSearchField" class="frmTxt" id="iSearchField"> <input type="submit" name="iFrmSiteSearch" id="iFrmSiteSearch" class="frmBtn" value="Search">
+                                        <label for="q" class="hide">Search TNS Global</label> <input type="text" name="q" class="frmTxt" id="q"> <input type="submit" class="frmBtn" value="Search">
                                       </fieldset>
                                     </form>
                                   </div>
-                                </div><a id="iLogo" href="/" name="iLogo"><img src="/_assets/TNS_Market_Research_Logo.jpg" alt="TNS Market Research Logo"></a>
+                                </div><a id="iLogo" href="/" name="iLogo"><img src="/_assets/TNS_Market_Reseach_Logo.gif" alt="TNS Global Market Research"></a>
                                 <div id="iNavL1">
                                   <ul class="nav">
                                     <li id="iNavL1Home" class="first">
@@ -275,7 +275,7 @@
 </div>
 
 </div>
-<span class="furtherInfo"><a id="UsefulContact861D88305E8E4080AEAC1AF4E66F5592_lnkSendEnquiry" href="contact-us/index.aspx?Contact=1235">Send a message</a></span>
+<span class="furtherInfo"><a id="UsefulContact861D88305E8E4080AEAC1AF4E66F5592_lnkSendEnquiry" href="contact-us/?Contact=1235">Send a message</a></span>
 <div id="UsefulContact861D88305E8E4080AEAC1AF4E66F5592_panFind">
 	
 	<fieldset class="countryList">
@@ -309,6 +309,7 @@
 		<option value="728">Estonia</option>
 		<option value="729">Finland</option>
 		<option value="730">France</option>
+		<option value="7587">Georgia</option>
 		<option value="731">Germany</option>
 		<option value="732">Greece</option>
 		<option value="625">Guatemala</option>
@@ -462,14 +463,15 @@
 </script><noscript><img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://sdc.tnsglobal.com/dcs93x2hb10000oqcyzelhv5n_4k1f/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.2" id="DCSIMG" /></noscript><script type="text/javascript" src="/_assets/js/gatag.js">
 </script><script type="text/javascript">
 //<![CDATA[
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
     //]]>
     </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">
 //<![CDATA[
     try{var pageTracker=_gat._getTracker("UA-7207976-1");pageTracker._trackPageview();}catch(err){}
     //]]>
     </script>
+    <div class="clear"></div>
   
 
 </body></html>
