--- a/c/ca/cat/catchoftheday.com.au.html
+++ b/c/ca/cat/catchoftheday.com.au.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the catchoftheday.com.au privacy policy that was archived on 2009-02-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090227181623id_/http%3A//www.catchoftheday.com.au/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the catchoftheday.com.au privacy policy that was archived on 2009-10-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091013070143id_/http%3A//www.catchoftheday.com.au/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Catch Of The Day - More Than You Bargained For</title>
+<title>Catch Of The Day - One Deal, Everyday, Midday</title>
 <link href="cotd.css" rel="stylesheet" type="text/css">
 <script src="js/cotd.js"></script>
 </head>
@@ -13,8 +13,8 @@
   <div id="container">
 <div id="leftcol">
   <div id="logolink"><a href="index.php"><span>CatchoftheDay</span></a></div>
-  <div id="timeleft"><div id="countdown">06:43:35 </div>
-<script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
+  <div id="timeleft"><div id="countdown">17:58:15 </div>
+<script type="text/javascript" src="https://ssl.google-analytics.com/ga.js"></script>
 <script type="text/javascript">
 var pageTracker = _gat._getTracker("UA-2619427-1");
 pageTracker._initData();
@@ -30,7 +30,7 @@ pageTracker._trackPageview();
 function cdLocalTime(container, servermode, offsetMinutes, targetdate, debugmode){
 if (!document.getElementById || !document.getElementById(container)) return
 this.container=document.getElementById(container)
-var servertimestring=(servermode=="server-php")? 'February 28, 2009 05:16:23' : (servermode=="server-ssi")? '<!--#config timefmt="%B %d, %Y %H:%M:%S"--><!--#echo var="DATE_LOCAL" -->' : '<%= Now() %>'
+var servertimestring=(servermode=="server-php")? 'October 13, 2009 18:01:43' : (servermode=="server-ssi")? '<!--#config timefmt="%B %d, %Y %H:%M:%S"--><!--#echo var="DATE_LOCAL" -->' : 'October 13, 2009 18:01:43'
 this.localtime=this.serverdate=new Date(servertimestring)
 this.targetdate=new Date(targetdate)
 this.debugmode=(typeof debugmode!="undefined")? 1 : 0
@@ -136,7 +136,7 @@ return displaystring
 
 //Note: "launchdate" should be an arbitrary but unique variable for each instance of a countdown on your page:
 
-var launchdate=new cdLocalTime("countdown", "server-php", 0, "February 28, 2009 12:00:00")
+var launchdate=new cdLocalTime("countdown", "server-php", 0, "October 14, 2009 12:00:00")
 launchdate.displaycountdown("days", formatresults2)
 </script></div>
 
@@ -160,34 +160,41 @@ function popupWindow(url) {
               }
               return true;
             }
-          </script>  <h3><a href="https://www.catchoftheday.com.au/login.php" class="bluelink">Join up here!</a></h3><form name="login" action="https://www.catchoftheday.com.au/login.php?action=login" method="post">
+          </script>  <h3><a href="https://www.catchoftheday.com.au/login.php" class="bluelink">Click HERE to register!</a></h3><form name="login" action="https://www.catchoftheday.com.au/login.php?action=login" method="post">
             <table width="236" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr>
                 <td width="86" class="tdpadd"><input type="text" name="email_add" class="inputbox" id="email_add" size="30" value="email or username" onfocus="clr(this.id)" onblur="rstr(this.id,'email or username')"></td>
                 <td width="86" class="tdpadd"><input type="password" name="pass" class="inputbox" id="pass" size="30" value="password" onfocus="clr(this.id)" onblur="rstr(this.id,'password')" onkeypress="return onEnter(event,this.form);"></td>
-                <td width="64"><input type="image" src="images/img/go_button.gif" alt="Login" border="0"></td>
+                <td width="64"><input type="image" src="../images/img/go_button.gif" alt="Login" border="0"></td>
               </tr>
             </tbody></table>
             </form>
-            <a href="http://www.catchoftheday.com.au/password_forgotten.php" class="bluelink">I forgot my password</a>
-          </div><div><img src="images/img/loginsec_footer.gif"></div><div class="box_pink">
+            <a href="http://www.catchoftheday.com.au/password_forgotten.php" class="bluelink">I forgot my password</a></div><div><img src="../images/img/loginsec_footer.gif"></div><div class="box_pink">
   <div class="boxheader"><img src="../images/img/t_catchcountdown.gif" alt="Catch countdown"></div>
   <div class="boxcontent">
     <div class="spn1"><strong>TIME LEFT</strong></div>
-    <div class="spn2">6h 44m</div>
+    <div class="spn2">17h 59m</div>
     <div class="separator"></div>
     <div class="spn1"><strong>LAST CATCH</strong></div>
-    <div class="spn2">Motherchook</div>
+    <div class="spn2">number3</div>
     <div class="separator"></div>
-    <div><img src="../images/awards/awards0803.jpg" alt="Awards" border="0" usemap="#Awards"><map name="Awards" id="Awards"><area shape="rect" coords="73,7,145,99"></map></div>
+    <div><img src="../images/awards/awards0903.jpg" alt="Awards" border="0" usemap="#Awards"><map name="Awards" id="Awards"><area shape="rect" coords="73,7,145,99"></map></div>
+    <div><center><a href="javascript:{};" onclick="javascript:window.open('https://www.paypal.com/us/cgi-bin/webscr?cmd=xpt/Marketing/popup/OLCWhatIsPayPal-outside','olcwhatispaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=400, height=350');"><img src="https://www.paypal.com/en_US/i/bnr/bnr_nowAccepting_150x40.gif" border="0" alt="Additional Options"></a></center></div>
   </div>
 </div>
-<div class="boxfooter"><img src="../images/img/box_btm_pink.gif" alt="b"></div><div class="box_blue">
-  <div class="boxheader"><img src="../images/img/t_smallfish.gif" alt="Small fish"></div>
+<div class="boxfooter"><img src="../images/img/box_btm_pink.gif" alt="b"></div><div class="box_wine">
+  <div class="boxheader">&nbsp;</div>
   <div class="boxcontent">
-<div class="thumb"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2938"><img src="../images//philips_vista_remote/remote1.jpg" width="80" height="80" border="0" alt=" Philips Multimedia Remote Control SRM5100 " title=" Philips Multimedia Remote Control SRM5100 "></a></div><div class="desc"><h3>Philips Multimedia Remote Control SRM5100</h3><div class="smallfishprice">$49.95</div></div><div class="separator"></div><div class="readmore"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2938" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div><div class="thumb"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2942"><img src="../images//philips_tuneup/tune1.jpg" width="80" height="80" border="0" alt=" Philips Complete PC Tune-Up Kit " title=" Philips Complete PC Tune-Up Kit "></a></div><div class="desc"><h3>Philips Complete PC Tune-Up Kit</h3><div class="smallfishprice">$9.95</div></div><div class="separator"></div><div class="readmore"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2942" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div><div class="thumb"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2939"><img src="../images//braun_brush/brush1.jpg" width="80" height="80" border="0" alt=" Braun Independent Power Brush " title=" Braun Independent Power Brush "></a></div><div class="desc"><h3>Braun Independent Power Brush</h3><div class="smallfishprice">$14.95</div></div><div class="separator"></div><div class="readmore"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2939" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div><div class="thumb"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2940"><img src="../images//kensingtonCal/calculator1.jpg" width="80" height="80" border="0" alt=" Kensington 3 in 1 Keypad &amp; USB Hub " title=" Kensington 3 in 1 Keypad &amp; USB Hub "></a></div><div class="desc"><h3>Kensington 3 in 1 Keypad &amp; USB Hub</h3><div class="smallfishprice">$19.95</div></div><div class="separator"></div><div class="readmore"><a href="http://www.catchoftheday.com.au/smallfish_info.php?products_id=2940" class="bluelink">read more</a></div>  </div>
+    <div class="thumb"><a href="http://wine.catchoftheday.com.au"><img src="../images//katook/katook_main_new.jpg" width="80" height="80" border="0" alt=" 12 x Katnook Estate Chardonnay 2002 " title=" 12 x Katnook Estate Chardonnay 2002 "></a></div>
+    <div class="desc">
+      <h3>12 x Katnook Estate Chardonnay 2002</h3>
+      <div class="smallfishprice">$149.95</div>
+    </div>
+    <div class="separator"></div>
+    <div class="readmore"><a href="http://wine.catchoftheday.com.au" class="bluelink">read more</a></div>
+  </div>
 </div>
-<div class="boxfooter"><img src="../images/img/box_btm_blue.gif"></div>
+<div class="boxfooter"><img src="../images/img/box_wine_bottom.gif" alt="b"></div>
 <script language="JavaScript1.2" type="text/javascript">
   function verify(form)
   {
@@ -265,10 +272,10 @@ function popupWindow(url) {
 <div class="boxfooter"><img src="../images/img/box_btm_green.gif" alt="b"></div><div class="box_blue">
   <div class="boxheader"><a href="http://www.catchoftheday.com.au/past_product_archive.php"><img src="../images/img/t_theones.gif" alt="The ones that got away" border="0"></a></div>
   <div class="boxcontent">
-Friday 27,02,2009<br><h3>Braun C80S Cordless Steam Styler</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=996" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div>Thursday 26,02,2009<br><h3>Welcome to the February Catchathon!</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=995" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div>Wednesday 25,02,2009<br><h3>The Covergirl Megabox</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=994" class="bluelink">read more</a></div>  </div>
+Monday 12,10,2009<br><h3>22 Piece Canningvale Luxury Towel Set</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=1325" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div>Sunday 11,10,2009<br><h3>Sennheiser CX500 Premium In-Ear Headphones</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=1324" class="bluelink">read more</a><br><img src="../images/img/sep2.gif"></div>Saturday 10,10,2009<br><h3>Seagate 500GB FreeAgent Desk Drive</h3><div class="readmore"><a href="http://www.catchoftheday.com.au/past_product.php?past_product_id=1323" class="bluelink">read more</a></div>  </div>
 </div>
 <div class="boxfooter"><img src="../images/img/box_btm_blue.gif" alt="b"></div>      <center>
-      <a href="/news.php?article=411"><img src="/images/catch_careers.jpg" border="0" alt="catch careers"></a>
+      <!-- <a href="/news.php?article=411"><img src="/images/catch_careers.jpg" border="0" alt="catch careers" /></a> -->
       <img src="/images/img/payment_processors.gif" border="0" alt="Affiliates" usemap="#Map">
       <map name="Map" id="Map">
         <area shape="rect" coords="56,7,107,43" href="http://www.visa.com" target="_blank">
@@ -280,10 +287,11 @@ Friday 27,02,2009<br><h3>Braun C80S Cordless Steam Styler</h3><div class="readmo
 <!-- END SCANALERT CODE -->
       </center>
       <br>
-    </div>    <div id="rightcol">
+    </div>
+    <div id="rightcol">
       <div id="menu">
   <ul>
-    <li><img src="images/img/menu_left.gif"></li><li><a href="http://www.catchoftheday.com.au/index.php"><img src="images/img/b1.gif" alt="Catch of the Day" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/about_us.php"><img src="images/img/b2.gif" alt="About us" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/news.php"><img src="images/img/b3.gif" alt="Blog" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/past_product_archive.php"><img src="images/img/b4.gif" alt="Caught" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/faq.php"><img src="images/img/b5.gif" alt="FAQ's" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/account.php"><img src="images/img/b6.gif" alt="My Account" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/helpcenter/"><img src="images/img/b8.gif" alt="Contact us" border="0"></a></li><li><img src="images/img/menu_right.gif"></li>
+    <li><img src="images/img/menu_left.gif"></li><li><a href="http://www.catchoftheday.com.au/index.php"><img src="images/img/b1.gif" alt="Catch of the Day" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/about_us.php"><img src="images/img/b2.gif" alt="About us" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/news.php"><img src="images/img/b3.gif" alt="Blog" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/past_product_archive.php"><img src="images/img/b4.gif" alt="Caught" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/wine/index.php"><img src="images/img/b5w.gif" alt="Wine of the Week" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/account.php"><img src="images/img/b6.gif" alt="My Account" border="0"></a></li><li><a href="http://www.catchoftheday.com.au/helpcenter/"><img src="images/img/b8.gif" alt="Contact us" border="0"></a></li><li><img src="images/img/menu_right.gif"></li>
   </ul>
 </div>
       <div id="seczone">
@@ -321,8 +329,84 @@ Friday 27,02,2009<br><h3>Braun C80S Cordless Steam Styler</h3><div class="readmo
   <div id="bottom_menu">
     <a href="http://www.catchoftheday.com.au/index.php" class="whitelink">today’s catch</a>  |  <a href="http://www.catchoftheday.com.au/about_us.php" class="whitelink">about us</a>  |  <a href="http://www.catchoftheday.com.au/news.php" class="whitelink">blog</a>  |  <a href="http://www.catchoftheday.com.au/past_product_archive.php" class="whitelink">caught</a>  |  <a href="http://www.catchoftheday.com.au/faq.php" class="whitelink">faq’s</a> |  <a href="http://www.catchoftheday.com.au/account.php" class="whitelink">account</a>  |  <a href="http://www.catchoftheday.com.au/helpcenter/" class="whitelink">help</a>
   </div>
-  <div id="copyright">© 2006-2009 Catch of The Day Zeus. All rights are reserved.  <a href="terms.php" class="bluelink">Terms of Use</a> | <a href="privacy.php" class="bluelink">Privacy Statement</a></div>
+  <div id="copyright">© 2006-2009 Catch of The Day Hades. All rights are reserved.  <a href="terms.php" class="bluelink">Terms of Use</a> | <a href="privacy.php" class="bluelink">Privacy Statement</a></div>
 </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="../js/jcarousellite_1.0.1.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+$("#scrolling_small_fish").jCarouselLite({
+    btnPrev: ".buttons a.prev",
+    btnNext: ".buttons a.next",
+    vertical: true,
+    auto: 40000,
+    speed: 450,
+    visible: 4
+});
+window.onload = function() {window.setTimeout('sfscroll()',5000);}
+</script>
+<style type="text/css">
+#scrolling_small_fish{
+	margin-left: 25px;
+}
+#scrolling_small_fish #small_fish{
+	height: 355px;
+	overflow: hidden;
+	width: 230px;
+	margin: 0 auto;
+}
+#small_fish li{
+	border-bottom: 1px dotted #999;
+	width: 220px;
+	padding: 10px;
+	margin: 0 auto 10px auto;
+}
+#small_fish li img{
+	float: left;
+	margin: 0 8px 10px 0;
+}
+#small_fish li a.product_title{
+	float: right;
+	font-size: 11px;
+	text-align: left;
+	font-weight: bold;
+	margin: 0 0 3px 10px;
+	width: 120px;
+	color: #2f435e;
+  text-decoration: none;
+  height: 4.8em;
+}
+#small_fish li p.price{
+	float: right;
+	width: 120px;
+	margin: 0 0 5px 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	color: #4EAE11;
+	font-size: 25px;
+}
+#small_fish_products div.buttons{
+	margin: 0 0 0 130px;
+}
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+#small_fish li a.more{
+  color:#0069C8;
+  text-decoration:none;
+	float: right;
+	margin: 0;
+	font-size: 10px;
+  clear: right;
+  width: 60px;
+}
+.pull_right{
+	text-align: right;
+}
+</style>
 </div>
 
 
