--- a/t/tr/tre/treasurydirect.gov.html
+++ b/t/tr/tre/treasurydirect.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the treasurydirect.gov privacy policy that was archived on 2009-05-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090511170048id_/http%3A//www.treasurydirect.gov/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the treasurydirect.gov privacy policy that was archived on 2009-10-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091015021740id_/http%3A//www.treasurydirect.gov/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/common.dwt" codeOutsideHTMLIsLocked="false" --><head>
 		<!-- InstanceBeginEditable name="page_title" -->
@@ -283,6 +283,8 @@
 		<li><a href="/privacy.htm">Privacy &amp; Legal Notices</a></li>
 		<li>|</li>
 		<li><a href="/terms.htm">Website Terms &amp; Conditions</a></li>
+		<li>|</li>
+		<li><a href="/viewers.htm">Plug-ins &amp; Viewers</a></li>
 		<li>|</li>
 		<li><a href="/accessibility.htm">Accessibility</a></li>
 		<li>|</li>
