--- a/a/aa/aas/aas.org.html
+++ b/a/aa/aas/aas.org.html
@@ -1,25 +1,19 @@
-<!--The following is the downloaded HTML source of the aas.org privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218012958id_/http%3A//aas.org/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aas.org privacy policy that was archived on 2009-10-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091015045846id_/http%3A//aas.org/privacy_policy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class="js"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Privacy Policy | American Astronomical Society</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/files/logos/favicon.png" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/fckeditor/fckeditor.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/gallery/gallery.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/gallery/gallery_filter.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/switchtheme/switchtheme.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/files/color/pixture-35c399cb/style.css?5">
-      <!--[if lt IE 7]>
+  <link type="text/css" rel="stylesheet" media="all" href="/files/css/css_6f31fa18b0626e30eb4b6ed10dfc5c40.css">
+  <script type="text/javascript" src="/files/js/js_ab8a103fb1833655d3aa55ba568d06ca.js"></script>
+<script type="text/javascript">
+<!--//--><![CDATA[//><!--
+jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } });
+//--><!]]>
+</script>
+    <!--[if lt IE 7]>
     <style type="text/css" media="all">@import "/themes/pixture/fix-ie.css";</style>
     <![endif]-->
     <style type="text/css" media="all">@import "/files/styles/style_custom_ids_and_classes.css";</style>
@@ -47,7 +41,7 @@
  <input type="text" maxlength="128" name="search_theme_form" id="edit-search-theme-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-b73bb49f1ff94be4781a7fdb0509fe5e" value="form-b73bb49f1ff94be4781a7fdb0509fe5e">
+<input type="hidden" name="form_build_id" id="form-5599d29c30ed52a6b1215d41c783b036" value="form-5599d29c30ed52a6b1215d41c783b036">
 <input type="hidden" name="form_id" id="edit-search-theme-form" value="search_theme_form">
 </div>
 
@@ -56,11 +50,14 @@
 </tr>
 <tr>
     <td id="menu" colspan="2">
-            <ul class="links" id="navlist"><li class="menu-282 first"><a href="/help_about/faq.php" title="Frequently Asked Questions">FAQ</a></li>
+            <ul class="links" id="navlist"><li class="menu-537 first"><a href="/calendar" title="AAS Calendar Online">Calendar</a></li>
+<li class="menu-772"><a href="/help_about" title="">Contact Us</a></li>
+<li class="menu-977"><a href="https://members.aas.org/contributions/" title="">Donate</a></li>
+<li class="menu-282"><a href="/help_about/faq.php" title="Frequently Asked Questions">FAQ</a></li>
 <li class="menu-211"><a href="http://members.aas.org/JobReg/" title="">Job Register</a></li>
-<li class="menu-208"><a href="http://journals.aas.org/" title="">Journals Home</a></li>
-<li class="menu-210"><a href="http://members.aas.org/" title="">Member Pages</a></li>
-<li class="menu-209 last"><a href="http://members.aas.org/directory/" title="">Membership Directory</a></li>
+<li class="menu-208"><a href="/journals" title="">Journals Home</a></li>
+<li class="menu-209"><a href="http://members.aas.org/directory/" title="">Member Directory</a></li>
+<li class="menu-210 last"><a href="http://members.aas.org/" title="">Member Pages</a></li>
 </ul>    </td>
 </tr>
 <tr>
@@ -84,18 +81,19 @@
 <tr>
   <td class="block-bl"></td>
   <td class="block-bc">
-    <div class="content"><ul class="menu"><li class="collapsed first"><a href="/divisions" title="AAS Divisions">AAS Divisions</a></li>
-<li class="collapsed"><a href="/staff" title="About AAS Executive Office">About AAS</a></li>
+    <div class="content"><ul class="menu"><li class="collapsed first"><a href="/staff" title="About AAS Executive Office">About AAS</a></li>
 <li class="collapsed"><a href="/career" title="Career Services">Career Services</a></li>
 <li class="leaf"><a href="/governance/committees.php" title="Committees, Boards, Working Groups, Editors">Committees</a></li>
 <li class="collapsed"><a href="/help_about" title="AAS Contacts">Contact AAS</a></li>
 <li class="leaf"><a href="/copyright.php" title="Copyright">Copyright</a></li>
 <li class="leaf"><a href="/governance/officers_and_councilors_current.php" title="Current Council">Council</a></li>
+<li class="collapsed"><a href="/divisions" title="AAS Divisions">Divisions</a></li>
 <li class="collapsed"><a href="/education" title="Education Services">Education Services</a></li>
 <li class="collapsed"><a href="/governance" title="Governance">Governance</a></li>
 <li class="collapsed"><a href="/grants" title="Grouped Grants, Prizes, and Awards">Grants/Prizes</a></li>
+<li class="leaf"><a href="/journals" title="AAS Journals">Journals</a></li>
 <li class="collapsed"><a href="/donation" title="Book/Journal/Equipment Donation Materials Forum">Materials Donation</a></li>
-<li class="collapsed"><a href="/meetings" title="Meetings Services">Meetings Services</a></li>
+<li class="collapsed"><a href="/meetings" title="Meeting Services">Meeting Services</a></li>
 <li class="collapsed"><a href="/membership" title="Membership Services">Membership Services</a></li>
 <li class="leaf active-trail"><a href="/privacy_policy.php" title="Privacy Policy" class="active">Privacy Policy</a></li>
 <li class="collapsed"><a href="/policy" title="Public Policy">Public Policy</a></li>
@@ -128,12 +126,12 @@
       <td>
         <h2 class="title"><a href="/privacy_policy.php">Privacy Policy</a></h2>
         <span class="submitted"></span>
-        <span class="taxonomy"><ul class="links inline"><li class="taxonomy_term_15 first last"><a href="/taxonomy/term/15" rel="tag" title="">Executive Office</a></li>
+        <span class="taxonomy">Page Tags: <ul class="links inline"><li class="taxonomy_term_15 first last"><a href="/taxonomy/term/15" rel="tag" title="">Executive Office</a></li>
 </ul></span>
       </td>
     </tr>
     </tbody></table>
-        <div class="content"><p>The American Astronomical Society (AAS) is committed to the value of privacy. As you use our web sites, you may be prompted to enter information when you:</p>
+        <div class="content"><span class="print-link"></span><p>The American Astronomical Society (AAS) is committed to the value of privacy. As you use our web sites, you may be prompted to enter information when you:</p>
 <ul>
 	<li>Create a user name and password</li>
 	<li>Use personalization features</li>
@@ -233,7 +231,10 @@ of any content you submit.</p>
 <h2>Notification of changes</h2>
 <p>If we make material changes to our privacy policy, these changes will be posted to our privacy policy page. You should review this page regularly for updates.</p>
 </div>
-    
+    <div class="links"><ul class="links inline"><li class="print_html first"><a href="/print/privacy_policy.php" title="Display a printer-friendly version of this page." class="print-page" rel="nofollow">Printer-friendly version</a></li>
+<li class="print_mail"><a href="/printmail/privacy_policy.php" title="Send this page by e-mail." class="print-mail" rel="nofollow">Send to friend</a></li>
+<li class="print_pdf last"><a href="/printpdf/privacy_policy.php" title="Display a PDF version of this page." class="print-pdf" rel="nofollow">PDF version</a></li>
+</ul></div>
   </td>
   <td class="node-mr"></td>
   </tr>
@@ -253,7 +254,7 @@ of any content you submit.</p>
 
 </div><!-- end of div#container -->
 
-<div id="footer"><p>© 2008, American Astronomical Society</p><table id="block-switchtheme-0" class="clear-block block block-switchtheme">
+<div id="footer"><p>© 2009, American Astronomical Society</p><table id="block-switchtheme-0" class="clear-block block block-switchtheme">
 <tbody><tr>
   <td class="block-tl"></td>
   <td class="block-tc">
@@ -266,10 +267,10 @@ of any content you submit.</p>
   <td class="block-bc">
     <div class="content"><form action="/privacy_policy.php" accept-charset="UTF-8" method="post" id="switchtheme-switch-form">
 <div><div class="form-item" id="edit-theme-wrapper">
- <select name="theme" title="Change the way this site looks." class="form-select" id="edit-theme"><option value="bluebreeze">bluebreeze (Light)</option><option value="garland">garland</option><option value="mobile">mobile (Phone and PDA)</option><option value="pixture">pixture (Default)</option></select>
+ <select name="theme" title="Change the way this site looks." class="form-select" id="edit-theme"><option value="bluebreeze">bluebreeze (Light)</option><option value="mobile">mobile (Phone and PDA)</option><option value="pixture">pixture (Default)</option></select>
 </div>
 <input type="submit" name="op" id="switchtheme-submit" value="Switch" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-714bfadaa3e792961a6812658549fa75" value="form-714bfadaa3e792961a6812658549fa75">
+<input type="hidden" name="form_build_id" id="form-a55039c659b00a7e7efaa709d7310831" value="form-a55039c659b00a7e7efaa709d7310831">
 <input type="hidden" name="form_id" id="edit-switchtheme-switch-form" value="switchtheme_switch_form">
 
 </div></form>
@@ -278,7 +279,34 @@ of any content you submit.</p>
   <td class="block-br"></td>
 </tr>
 </tbody></table>
+<table id="block-block-4" class="clear-block block block-block">
+<tbody><tr>
+  <td class="block-tl"></td>
+  <td class="block-tc">
+      </td>
+  <td class="block-tr"></td>
+</tr>
+<tr>
+  <td class="block-bl"></td>
+  <td class="block-bc">
+    <div class="content"><p><a href="/help_about">Contact Us and Help</a> <a href="http://fusion.google.com/add?source=atgs&amp;feedurl=http%3A//aas.org/rss.xml"><img src="http://gmodules.com/ig/images/plus_google.gif" border="0" alt="Add to Google"></a></p>
 </div>
+  </td>
+  <td class="block-br"></td>
+</tr>
+</tbody></table>
+</div><div id="store-footer"><a href="http://www.ubercart.org/">Drupal e-commerce</a> provided by Ubercart.</div><script type="text/javascript" src="/files/js/js_1e61e21e109726d9de62df0b413a09d2.js"></script>
+<script type="text/javascript">
+<!--//--><![CDATA[//><!--
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+//--><!]]>
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+<!--//--><![CDATA[//><!--
+try{var pageTracker = _gat._getTracker("UA-7341249-1");pageTracker._trackPageview();} catch(err) {}
+//--><!]]>
+</script>
+
 
 </div><!-- end of div#wrapper -->
 
